[package]
name = "tabler"
version = "0.1.1"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
license = "MIT"
edition = "2021"
description = "📊 Tabler: A lightweight TUI tool to view, query, and navigate CSV, TSV, and Parquet data files."
repository = "https://github.com/trinhminhtriet/tabler"
documentation = "https://trinhminhtriet.com"
homepage = "https://github.com/trinhminhtriet/tabler"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["csv", "tsv", "parquet", "data", "query"]

[[bin]]
name="tabler"
path="src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
fwf-rs = "0.2.0"
itertools = "0.14.0"
polars = { version = "0.44.2", features = ["dtype-decimal", "lazy", "polars-sql", "polars-io", "parquet", "json", "ipc"] }
polars-sql = "0.45.1"
polars-lazy = "0.45.1"
rand = "0.8.5"
ratatui = "0.29.0"

[build-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
clap_mangen = { version = "0.2.24"}
clap_complete = { version = "4.5.46"}

[package.metadata.deb]
license-file = [ "LICENSE", "4" ]
depends = "$auto"
extended-description = """
Tabler is a lightweight, terminal-based application to view and query delimiter separated value formatted documents, such as CSV and TSV files.
"""
section = "utils"
priority = "optional"
assets = [
    [ "target/release/tabler", "/usr/bin/tabler", "0755" ],
    [ "target/manual/tabler.1", "/usr/share/man/man1/tabler.1", "0644" ],
    [ "target/manual/tabler.1", "/usr/share/man/man1/tabler.1", "0644" ],
    [ "target/completion/tabler.bash", "/usr/share/bash-completion/completions/tabler.bash", "0644" ],
    [ "target/completion/_tabler", "/usr/share/zsh/vendor-completions/_tabler", "0644" ],
    [ "target/completion/tabler.fish", "/usr/share/fish/completions/tabler.fish", "0644" ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tabler", dest = "/usr/bin/tabler", mode = "755" },
    { source = "target/manual/tabler.1", dest = "/usr/share/man/man1/tabler.1", mode = "0644" },
    { source = "target/manual/tabler.1", dest = "/usr/share/man/man1/tabler.1", mode = "0644" },
    { source = "target/completion/tabler.bash", dest = "/usr/share/bash-completion/completions/tabler.bash", mode = "0644" },
    { source = "target/completion/_tabler", dest = "/usr/share/zsh/vendor-completions/_tabler", mode = "0644" },
    { source = "target/completion/tabler.fish", dest = "/usr/share/fish/completions/tabler.fish", mode = "0644" },
]

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = 'abort'

